uncommented style css

--- a/style.css
+++ b/style.css
@@ -109,12 +109,12 @@ h3 {
 
 
 
-/*
-colors: 
+
+/*colors: 
 background: #FFF7F7 
 nav: #FDD3DA
 footer: #CF8282
-button: #9B0000
+button: #9B0000;*/
 
 
 
