--- a/style.css
+++ b/style.css
@@ -108,13 +108,13 @@ nav ul li a:active {
 }
 
 h1 {
-  font-family: straaliches;
+  font-family: straatliches;
 }
 h2 {
-  font-family: straaliches;
+  font-family: straatliches;
 }
 h3 {
-  font-family: straaliches;
+  font-family: straatliches;
 }
 
 /*colors: 
