--- a/style.css
+++ b/style.css
@@ -109,7 +109,8 @@ nav ul li a:active {
 
 h1 {
   font-family: straatliches;
-  padding: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
 }
 h2 {
   font-family: straatliches;
@@ -120,7 +121,6 @@ h3 {
 
 p {
   font-family: geneva;
-  text-align: center;
 }
 
 /*colors: 
