--- a/productpage.css
+++ b/productpage.css
@@ -57,6 +57,12 @@ img {
 
 p {
   color: black;
+
+  font-family: museo-sans, sans-serif;
+
+  font-weight: 300;
+
+  font-style: normal;
 }
 
 h1 {
