--- a/productpage.css
+++ b/productpage.css
@@ -57,12 +57,6 @@ img {
 
 p {
   color: black;
-
-  font-family: museo-sans, sans-serif;
-
-  font-weight: 300;
-
-  font-style: normal;
 }
 
 h1 {
@@ -78,6 +72,10 @@ h3 {
   color: black;
 }
 
+h4 {
+  color: black;
+}
+
 dd {
   color: black;
 }
@@ -86,6 +84,6 @@ dt {
   color: black;
 }
 
-.purchaseBox {
-  line-height: 32px;
+.l {
+  line-height: 20px;
 }
