--- a/productpage.css
+++ b/productpage.css
@@ -89,3 +89,28 @@ li a {
 li {
   font-family: straatliches;
 }
+
+footer {
+  width: 100%;
+  background: #fdd3da;
+  opacity: 0.9;
+  color: white;
+  text-align: center;
+  column-span: all;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0;
+  padding: 0;
+  color: white;
+  box-sizing: border-box;
+  font-family: straatliches, sans-serif;
+}
+
+.copyright {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 13px;
+  color: #bf8484;
+  margin-bottom: 0;
+}
