--- a/style.css
+++ b/style.css
@@ -230,7 +230,6 @@ button: #9B0000;*/
   font-weight: 900;
   color: #333;
   padding: 5px;
-  
 }
 
 .container .card .face.face2 .content a:hover {
@@ -252,9 +251,6 @@ button {
   font-weight: 500;
   cursor: pointer;
   transition: all 0.4s ease;
-  
-  
-  
 }
 
 .products {
@@ -266,6 +262,11 @@ button {
   justify-content: center;
   align-content: center;
   margin-bottom: 5vw;
+}
+
+.image {
+  width: 50%;
+  margin-top: 20px;
 }
 
 .productlist {
@@ -291,62 +292,53 @@ button {
   font-weight: 300;
   font-style: normal;
   margin-top: 10px;
-  }
-  
+}
 
-  .products .smallProduct img:hover {
-    opacity: 0.8;
-    }
+.products .smallProduct img:hover {
+  opacity: 0.8;
+}
 
+.price {
+  color: grey;
+  font-size: 13px;
+}
 
+.region,
+.price,
+.grape {
+  line-height: 5px;
+  font-family: museo-sans, sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
 
-    .price {
-      color: grey;
-      font-size: 13px;
-      }
+.region {
+  font-family: museo-sans, sans-serif;
+}
 
-    .region,
-    .price,
-    .grape {
-      line-height: 5px;
-      font-family: museo-sans, sans-serif;
-      font-weight: 300;
-      font-style: normal;
-    }
+/* about page css*/
 
+.aboutmain {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 40px;
+  grid-column-gap: 20px;
+}
 
-    .region {
-      font-family: museo-sans, sans-serif;
-      }
+.wineglasses {
+  width: 80%;
+}
 
+.wineimages {
+  display: flex;
+  justify-content: center;
+}
 
-  /* about page css*/
-
-  .aboutmain{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin: 40px;
-    grid-column-gap: 20px;
-  }
-
-  .wineglasses{
-    width: 80%;
-  }
-
-  .wineimages{
-    display: flex;
-    justify-content: center;
-  }
-
-  .bigletter::first-letter{
-    font-size: 300%;
-  }
-
-  
-
+.bigletter::first-letter {
+  font-size: 300%;
+}
 
 /* footer*/
-
 
 footer {
   width: 100%;
@@ -371,4 +363,4 @@ footer {
   font-size: 13px;
   color: #bf8484;
   margin-bottom: 0;
-  }
+}
